# geometric_modeling_2023

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  main.cpp
Shaders/: mFragShader.glsl
glad/include/glad/: glad.h
glad/src/: glad.c
headers/: Game.h
headers/Octree/: Box.h  Primitive.h  Sphere.h  octree.h
headers/Octree/utils/: BoundingBox.h
headers/Primitives/: Imagem.h  Mesh.h  Model.h  Texture.h
headers/States/: State.h
octree/: CMakeLists.txt  octree.cpp  octree.h
ogl/: Game.h
ogl/Primitives/: Camera.h  Mesh.h  Model.h  Vertex.h
ogl/States/: State.h
ogl/shaders/: mVtxShader.glsl
primitives/: Box.cpp  Box.h  Cylinder.cpp  Cylinder.h  Primitive.cpp  Primitive.h  Sphere.cpp  Sphere.h
renderizador opengl/: Makefile
renderizador opengl/Shaders/: mFragShader.glsl  mVtxShader.glsl
renderizador opengl/headers/: Game.h
renderizador opengl/headers/Entities/: Pokemon.h
renderizador opengl/headers/Primitives/: Shader.h
renderizador opengl/headers/States/: State.h
renderizador opengl/include/glad/: glad.h
renderizador opengl/source/: Libs.cpp  main.cpp
renderizador_opengl/: Notes.txt  clear.py
renderizador_opengl/Shaders/: mFragShader.glsl  mVtxShader.glsl
renderizador_opengl/headers/: Game.h
renderizador_opengl/headers/Primitives/: Camera.h  Mesh.h  primform.h
renderizador_opengl/headers/States/: State.h
renderizador_opengl/source/: glad.c  main.cpp
rt_interface/: InterceptableOctree.cpp  InterceptableOctree.h  IntersectionTests.cpp  IntersectionTests.h
strippedRayTracer/: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md
strippedRayTracer/RayTracerRedone/: .gitignore  RayTracerRedone.cpp  worlds.h
strippedRayTracer/RayTracerRedone/imageoutputcanvas/: imagecanvas.cpp  imagecanvas.h
strippedRayTracer/RayTracerRedone/imageoutputcanvas/stb/: image_canvas_stb_image.h
strippedRayTracer/RayTracerRedone/tracer/config/: glm_definitions.h
strippedRayTracer/RayTracerRedone/tracer/objects/: Ball.cpp  Ball.h  Disk.cpp  Disk.h  Plane.cpp  Plane.h  VirtualObject.cpp  VirtualObject.h
strippedRayTracer/RayTracerRedone/tracer/objects/BoundingBox/: AABB.cpp  AABB.h
strippedRayTracer/RayTracerRedone/tracer/scene/: Camera.cpp  Camera.h  Canvas.h  Projection.h  Ray.cpp  Ray.h  Scene.h  ViewPlane.cpp  ViewPlane.h  World.cpp  World.h
strippedRayTracer/RayTracerRedone/tracer/scene/BxDF/: BTDF.h  BxDF.h  FresnelReflector.cpp  FresnelReflector.h  FresnelTransmitter.cpp  FresnelTransmitter.h  GlossySpecular.cpp  GlossySpecular.h  Lambertian.cpp  Lambertian.h  MetallicSpecular.cpp  MetallicSpecular.h  PerfectSpecular.cpp  PerfectSpecular.h  PerfectTransmitter.cpp  PerfectTransmitter.h
strippedRayTracer/RayTracerRedone/tracer/scene/light/: AmbientLight.cpp  AmbientLight.h  AreaLight.cpp  AreaLight.h  DirectionalLight.cpp  DirectionalLight.h  Light.h  PointLight.cpp  PointLight.h  VectorialLight.cpp  VectorialLight.h
strippedRayTracer/RayTracerRedone/tracer/scene/materials/: BumpMapping.cpp  BumpMapping.h  Dielectric.cpp  Dielectric.h  Diffuse.cpp  Diffuse.h  DiffuseLight.cpp  DiffuseLight.h  Material.h  Matte.cpp  Matte.h  Mirror.cpp  Mirror.h  NullMaterial.cpp  NullMaterial.h  Phong.cpp  Phong.h  PhongMetal.cpp  PhongMetal.h  PhongReflective.cpp  PhongReflective.h  SampleDielectric.cpp  SampleDielectric.h  TexturedMaterial.cpp  TexturedMaterial.h  TexturedMatte.cpp  TexturedMatte.h  TexturedPhong.cpp  TexturedPhong.h  TexturedPhongReflective.cpp  TexturedPhongReflective.h  Transparent.cpp  Transparent.h  WhiteMetal.cpp  WhiteMetal.h
strippedRayTracer/RayTracerRedone/tracer/scene/textures/: CheckerTexture.cpp  CheckerTexture.h  ImageTexture.cpp  ImageTexture.h  PointCheckerTexture.cpp  PointCheckerTexture.h  Texture.cpp  Texture.h
strippedRayTracer/RayTracerRedone/tracer/utils/: ColorRGBA.h  ColorVec.cpp  ColorVec.h  Constants.h  Intersection.h  OrthonormalBase.cpp  OrthonormalBase.h  Types.h  utility.cpp  utility.h
strippedRayTracer/RayTracerRedone/tracer/utils/sampler/: sampler.h
strippedRayTracer/RayTracerRedone/tracer/utils/stb/: rtr_stb_image.h
utils/: BoundingBox.cpp  BoundingBox.h
